# lorri

./: .travis.yml  .travis.yml.nix  CPP-FUNCTIONS  Cargo.nix  Cargo.toml  build.rs  release.nix  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
nix/: nixpkgs.json
nix/carnix/: crates-io.nix
nix/ci/: default.nix  execline.nix  execlineb-wrapper.c
src/: build_loop.rs  builder.rs  cli.rs  daemon.rs  lib.rs  logged-evaluation.nix  main.rs  nix.rs  panic.rs  project.rs  watch.rs
src/ops/: daemon.rs  mod.rs  ping.rs  services.rs  shell.rs  watch.rs
tests/daemon/: main.rs
tests/shell/: main.rs
