[package]
name = "lorri"
version = "0.1.0"
authors = [
  "Graham Christensen <graham.christensen@target.com>",
]
license = "Apache-2.0"

[dependencies]
atomicwrites = "0.2.3"
bincode = "1.1.3"
crossbeam = "0.7.2"
directories = "1.0.2"
env_logger= "0.6"
futures = "0.1.25"
lazy_static = "1.2.0"
log = "0.4"
md5  = "0.6.1"
nix = "0.14.0"
notify = "4.0.6"
proptest = "0.9.1"
regex = "1.1.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
structopt = "0.2"
tempfile = "3.0.7"
vec1 = "1.1.0"

